# Neopolitan

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Neopolitan.jucer  README.md
Source/: CMakeLists.txt  Constants.h  FrequencySpectrumAnalyzer.cpp  FrequencySpectrumAnalyzer.h  Main.cpp  MainComponent.cpp  NeopolitanConstants.h  NeopolitanGUIConstants.h  NeopolitanUtilities.h  PluginEditor.cpp  PluginEditor.h  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h  Spec.cpp  Spec.h
Source/Audio/: CMakeLists.txt  FlavorNoiseGenerator.h
Source/Components/: CMakeLists.txt  DecibelSlider.h  FlavorKnob.cpp  FlavorKnob.h  FrequencySpectrumDisplay.cpp  FrequencySpectrumDisplay.h  MainComponent.h  MainScene.cpp  MainScene.h  NeopolitanLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  SpectrumAnalyser.h
Source/Data/: CMakeLists.txt  FlavorNoiseGenerator.h
cmake/: compiler_options.cmake  cpack.cmake  cppcheck.cmake
